--- a/views/coffee/show.ejs
+++ b/views/coffee/show.ejs
@@ -18,7 +18,7 @@
 
           <div class="coffee-card-heading-wrapper">
              <h1 class="coffee-card-name-heading"><%= coffee.name %></h1>
-             <h2 class="coffee-subheading"><%= coffee.roaster %></h2>&nbsp;|&nbsp;<h2>Roast date: <%= displayDate %></h2>
+             <h2 class="coffee-subheading"><%= coffee.roaster %>&nbsp;|&nbsp;Roast date: <%= displayDate %></h2>
              <h4 class="coffee-card-user">Reviewed by: <%= coffee.user ? coffee.userName : 'anonymous' %></h4>
           </div>
 
