--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -490,7 +490,8 @@ margin-top: 0;
 }
 
 .review-content{
-  font-size: 1.8rem;
+  font-size: 1.2rem;
+  text-align: left;
 }
 
 .review-card-user-img{
@@ -1047,7 +1048,7 @@ margin-top: 0;
       padding: 0 20px 0 20px;
     }
   
-    .show-coffee-wrapper, .results-wrapper, .index-wrapper, .favourites-page-wrapper{
+    .show-coffee-wrapper, .results-wrapper, .index-wrapper, .favourites-page-wrapper, .new-coffee-page-wrapper{
       padding: 50px 20px 50px 20px;
     }
   
@@ -1077,7 +1078,7 @@ margin-top: 0;
       margin: 0;
     }
     .coffee-card-review{
-      text-align: center;
+      text-align: left;
     }
     .scores-wrapper{
       justify-content: center;
